2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove non-working support for lynxos 3.0.
	* s/lynxos.h: Remove file.

	* unexec.c (unexec, adjust_lnnoptrs): Do not depend on
	COFF_BSD_SYMBOLS, nothing defines it anymore.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove obsolete uses of HAVE_SHM.
	* emacs.c (standard_args):
	(Fdump_emacs):
	(syms_of_emacs): Remove code depending on HAVE_SHM.

	* alloc.c: Remove HAVE_SHM dependent definition.

	* Makefile.in (RUN_TEMACS): Do not depend on HAVE_SHM.

2010-03-18  Glenn Morris  <rgm@gnu.org>

	* emacs.c (USAGE4): Hard-code bug address.
	(REPORT_EMACS_BUG_ADDRESS, REPORT_EMACS_BUG_PRETEST_ADDRESS): Remove.
	(bug_reporting_address): Remove.
	(main): Don't call bug_reporting_address.

	* Makefile.in (XFT_LIBS, LIBXPM, LIBJPEG, LIBPNG, LIBTIFF, LIBGIF)
	(LIBGPM, LIBRESOLV): Set using autoconf rather than cpp.

2010-03-15  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_create_frame):
	* frame.c (Vdefault_frame_scroll_bars): Put non-GTK X scroll-bars
	on left.

2010-03-13  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* editfns.c (Fformat): Account for string precision when computing
	field width (Bug#5710).

2010-03-12  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_create_frame): Set default to Qright.

	* frame.c (Vdefault_frame_scroll_bars): Set default to Qright for
	all window systems.

2010-03-12  Eli Zaretskii  <eliz@gnu.org>

	These changes remove termcap.c from the build on Posix platforms.
	* Makefilie.in (termcapobj): Move termcap.o from here...
	(MSDOS_OBJ): ...to here.
	(termcapobj) [!LIBS_TERMCAP]: Remove specialized value, as it is
	now identical to when LIBS_TERMCAP is defined.

	* term.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* cm.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* config.in: Regenerated.  (See top-level ChangeLog.)

2010-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.2.

2010-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>
